@@ -1,3 +1,9 @@
+2002-02-01  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02961] halfdump image is not consistent
+	* file.c (flushline): check f
+	* file.c (do_blankline): fix blanklink conditions
+
 2002-02-01  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* gcc -Wall -Werror safe
@@ -2693,4 +2699,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.288 2002/01/31 18:28:24 ukai Exp $
+$Id: ChangeLog,v 1.289 2002/01/31 18:40:14 ukai Exp $
